--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div id="app"></div>
     <div id="frame"></div>
     <div id="text">Order Ab Chaos</div>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="src/main.js"></script>
     <p id="info">Right-click brings order. Right hold rotates. Left hold relocates.</p>
     <div id="copyright">© Elifnur Çiftçi</div>
   </body>
