index fix again

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
             color: rgba(174, 25, 25, 0.755);
             font-family: Georgia, serif;
             pointer-events: none;
+            max-width: 80vw;
+            word-wrap: break-word;
+            margin: 0;
         }
         #copyright {
             position: absolute;
@@ -59,7 +62,7 @@
     <div id="frame"></div>
     <div id="text">Order Ab Chaos</div>
     <script type="module" src="src/main.js"></script>
-    <p id="info">For PC: Right-click brings order. Right hold rotates. Left hold relocates. For mobile: just touch, hold and drag freely</p>
+    <p id="info">For PC: Right-click brings order. Right hold rotates. Left hold relocates. Scroll zooms in/out. For mobile: just touch, hold and drag freely</p>
     <div id="copyright">© Elifnur Çiftçi</div>
 
     <script>
