--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Order Ab Chaos</title>
+    <title>Elifnur Çiftçi</title>
     <style>
         body {
             margin: 0;
@@ -26,11 +26,7 @@
             transform: translate(-50%, -50%);
             color: rgb(94, 12, 12);
             font-size: 50px;
-            text-shadow: 
-            -1px -1px 0 black,  
-            1px -1px 0 black,
-            -1px  1px 0 black,
-            1px  1px 0 black;
+            
             font-family: Georgia, serif;
             font-style: normal;
             font-stretch: condensed;
@@ -55,16 +51,53 @@
             font-weight: bold;
             pointer-events: none;
         }
+        #togglecontainer {
+          position: absolute;
+          top: 5%;
+          left: 5%;
+          transform: translateY(-50%);
+          display: flex;
+          flex-direction: column; /* Dikey hizalama */
+          align-items: center; /* Yatayda ortala */
+          gap: 5px; /* Yazı ve yuvarlak arasındaki boşluk */
+          pointer-events: none;
+        }
+
+        #mode-toggle {
+          writing-mode: vertical-lr; /* Metni dikey yaz */
+          transform: rotate(180deg); /* Metni ters çevir */
+          font-family: Georgia, serif;
+          font-size: 17px;
+          color: rgba(174, 25, 25, 0.755);
+          cursor: pointer;
+          pointer-events: all;
+          white-space: nowrap; /* Yazının tek satırda kalmasını sağla */
+        }
+
+        #mode-indicator {
+          width: 17px;
+          height: 17px;
+          border: 2px solid rgba(174, 25, 25, 0.755);
+          border-radius: 50%;
+          cursor: pointer;
+          pointer-events: all;
+          flex-shrink: 0; /* Yuvarlağın boyutunun sabit kalmasını sağla */
+          order: -1; /* Yuvarlağı yazının üstüne yerleştir */
+        }
+
+        #mode-indicator.active {
+          background-color: rgba(174, 25, 25, 0.755);
+        }
     </style>
   </head>
   <body>
     <div id="app"></div>
     <div id="frame"></div>
-    <div id="text">Order Ab Chaos</div>
+    
+    <div id="text">Ordo Ab Chao</div>
     <script type="module" src="src/main.js"></script>
-    <p id="info">For PC: Right-click brings order. Right hold rotates. Left hold relocates. Scroll zooms in/out. For mobile: just touch, hold and drag freely</p>
+    <p id="info">For PC: Left-click brings order. Left-hold rotates. Right-hold relocates. Scroll zooms in/out. For mobile: just touch, hold and drag freely. PS: Outline inspired by Keita Yamada.</p>
     <div id="copyright">© Elifnur Çiftçi</div>
-
     <script>
       function positionElements() {
           const frame = document.getElementById("frame");
@@ -81,11 +114,19 @@
           // Info, frame'in altına yerleşsin
           info.style.top = `${frameRect.bottom + 5}px`;
           info.style.left = `${frameRect.left}px`;
+
+          togglecontainer.style.top = `${frameRect.bottom - 70}px`;
+          togglecontainer.style.left = `${frameRect.left -50}px`;
       }
 
       // İlk konumlandırma ve pencere boyutu değiştikçe güncelleme
       window.addEventListener("resize", positionElements);
       window.addEventListener("load", positionElements);
     </script>
+    <div id="togglecontainer">
+      <div id="mode-toggle">LIGHT / DARK</div>
+      <div id="mode-indicator"></div>
+    </div>
   </body>
+  
 </html>
