--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     
     <div id="text">Ordo Ab Chao</div>
     <script type="module" src="src/main.js"></script>
-    <p id="info">For PC: Left-click brings order. Left-hold rotates. Right-hold relocates. Scroll zooms in/out. For mobile: just touch, hold and drag freely. Note: Outline inspired by Keita Yamada.</p>
+    <p id="info">For PC: Left-click brings order. Left-hold rotates. Right-hold relocatess. Scroll zooms in/out. For mobile: just touch, hold and drag freely. Note: Outline inspired by Keita Yamada.</p>
     <div id="copyright">© Elifnur Çiftçi</div>
     <script>
       function positionElements() {
