--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             left: 5%;
             width: 90%;
             height: 90%;
-            border: 1px solid rgb(166, 3, 3);
+            border: 1px solid rgb(94, 12, 12);
             box-sizing: border-box;
             pointer-events: none;
         }
@@ -36,7 +36,7 @@
         #info{
             position: absolute;
             font-size: 13px;
-            color: rgba(174, 25, 25, 0.755);
+            color: rgb(94, 12, 12);
             font-family: Georgia, serif;
             pointer-events: none;
             max-width: 100vw;
@@ -46,9 +46,9 @@
         #copyright {
             position: absolute;
             font-size: 13px;
-            color: rgba(174, 25, 25, 0.755);
+            color: rgb(111, 21, 21);
             font-family: Georgia, serif;
-            font-weight: bold;
+            font-weight: bolder;
             pointer-events: none;
         }
         #togglecontainer {
@@ -68,7 +68,7 @@
           transform: rotate(180deg); /* Metni ters çevir */
           font-family: Georgia, serif;
           font-size: 17px;
-          color: rgba(174, 25, 25, 0.755);
+          color: rgb(94, 12, 12);
           cursor: pointer;
           pointer-events: all;
           white-space: nowrap; /* Yazının tek satırda kalmasını sağla */
@@ -77,7 +77,7 @@
         #mode-indicator {
           width: 17px;
           height: 17px;
-          border: 2px solid rgba(174, 25, 25, 0.755);
+          border: 2px solid rgba(94, 12, 12, 0.755);
           border-radius: 50%;
           cursor: pointer;
           pointer-events: all;
@@ -86,7 +86,7 @@
         }
 
         #mode-indicator.active {
-          background-color: rgba(174, 25, 25, 0.755);
+          background-color: rgba(174, 25, 25, 0.652)
         }
     </style>
   </head>
@@ -94,9 +94,9 @@
     <div id="app"></div>
     <div id="frame"></div>
     
-    <div id="text">Ordo Ab Chao</div>
+    <div id="text">ex chao nova harmonia</div>
     <script type="module" src="src/main.js"></script>
-    <p id="info">For PC: Left-click brings order. Left-hold rotates. Right-hold relocatess. Scroll zooms in/out. For mobile: just touch, hold and drag freely. Note: Outline inspired by Keita Yamada.</p>
+    <p id="info">For PC: Left-click brings order. Left-hold rotates. Right-hold relocates. Scroll zooms in/out. For mobile: just touch, hold and drag freely. Note: Outline inspired by Keita Yamada.</p>
     <div id="copyright">© Elifnur Çiftçi</div>
     <script>
       function positionElements() {
