--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <link rel="icon" type="image/svg+xml" href="/portfolio/icon.svg">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Elifnur Çiftçi</title>
+    <title>Elifnur Çiftçi's Portfolio</title>
     <style>
         body {
             margin: 0;
