--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           left: 50%;
           transform: translate(-50%, -50%);
           color: rgb(94, 12, 12);
-          font-size: 50px;
+          font-size: 7vh;
           font-family: Georgia, serif;
           font-style: normal;
           font-stretch: condensed;
@@ -182,12 +182,12 @@
           display: inline-block; /* Ensures scaling works properly */
         }
         #header h1 {
-          font-size: 85px;
+          font-size: 9.5vh;
           font-weight:50;
           margin: 0;
         }
         #header h2 {
-          font-size: 30px;
+          font-size: 3.7vh;
           font-weight: lighter;
           margin: 0;
         }
@@ -211,14 +211,14 @@
           }
 
           #menu button {
-            font-size: 18px;
+            font-size: 4vh;
           }
         }
 
         #menu button {
           background: none;
           border: none;
-          font-size: 20px;
+          font-size: 3.1vh;
           font-family: Georgia, serif;
           color: rgb(94, 12, 12);
           cursor: pointer;
@@ -243,7 +243,7 @@
             pointer-events: all;
             /*  Make it scrollable */
             overflow: auto;
-            
+            font-size: 2.4vh;
             /*  Hide scrollbar (Works in most browsers) */
             scrollbar-width: none; /* Firefox */
             -ms-overflow-style: none; /* IE & Edge */
@@ -259,9 +259,9 @@
               position: absolute;
                 bottom: 5%;
                 right: 5%;
-                width: 70%;
+                max-width: 50vh;
                 text-align: right;
-                font-size: 19px;
+                font-size: 2vh;
             }
         }
     </style>
