--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 
         /* Circle default state */
         .circle {
-            width: 26px;
-            height: 26px;
+            width: 2.5vh;
+            height: 2.5vh;
             background-color: rgb(94, 12, 12);
             border-radius: 50%;
             position: absolute;
@@ -75,7 +75,6 @@
 
         /* Text default state */
         .text {
-            font-size: 20px;
             font-family: 'Times New Roman', Times, serif;
             font-weight: normal;
             color: rgb(94, 12, 12);
@@ -236,7 +235,6 @@
             max-height: 85vh;
             color: rgb(94, 12, 12);
             font-family: Georgia, serif;
-            font-size: 20px;
             line-height: 1.5;
             text-align: right;
             cursor: pointer;
@@ -259,7 +257,8 @@
               position: absolute;
                 bottom: 5%;
                 right: 5%;
-                max-width: 50vh;
+                max-width: 5
+                0vh;
                 text-align: right;
                 font-size: 2vh;
             }
