--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           left: 50%;
           transform: translate(-50%, -50%);
           color: rgb(94, 12, 12);
-          font-size: 7vh;
+          font-size: 6vh;
           font-family: Georgia, serif;
           font-style: normal;
           font-stretch: condensed;
@@ -126,6 +126,7 @@
         #copyright {
           position: absolute;
           font-size: 1.5vh;
+
           color: rgb(111, 21, 21);
           font-family: Georgia, serif;
           font-weight: bolder;
@@ -172,21 +173,21 @@
           position: absolute;
           top: 5%;
           left: 5%;
-          width: 40%;
+          width: 40vw;
           max-width: 90%;
-          max-height: 50vh;
+          max-height: 40vh;
           color: rgb(94, 12, 12);
           font-family: 'Times New Roman', Times, serif;
           font-stretch: condensed; /* Tries to use a condensed version if available */
           display: inline-block; /* Ensures scaling works properly */
         }
         #header h1 {
-          font-size: 9.5vh;
+          font-size: 7.5vh;
           font-weight:50;
           margin: 0;
         }
         #header h2 {
-          font-size: 3.7vh;
+          font-size: 3vh;
           font-weight: lighter;
           margin: 0;
         }
@@ -194,6 +195,7 @@
           position: absolute;
           top: calc(10% + 12vh); /* Header yüksekliğine bağlı olarak aşağı kaydır */
           left: 5%;
+          width: 20vw;
           display: flex;
           flex-direction: column;
           gap: 1vh;
@@ -221,7 +223,7 @@
         #menu button {
           background: none;
           border: none;
-          font-size: 3.1vh;
+          font-size: 2.7vh;
           font-family: Georgia, serif;
           color: rgb(94, 12, 12);
           cursor: pointer;
@@ -236,6 +238,7 @@
             bottom: 4%;
             right: 5%;
             width: 16%;
+            max-width: 20vw;
             max-height: 85vh;
             color: rgb(94, 12, 12);
             font-family: Georgia, serif;
