--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 
         /* Adjust positioning when screen is smaller */
         /* Küçük ekranlarda menüyü yeniden konumlandır */
-        @media (max-width: 768px), (pointer: coarse){
+        @media only screen and (max-width: 768px){
           #content {
             position: absolute;
               bottom: 5%;
