--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
           font-stretch: condensed;
           font-weight: lighter;
           pointer-events: none;
+          white-space: nowrap;
         }
         #info{
           position: absolute;
@@ -174,7 +175,7 @@
           top: 5%;
           left: 5%;
           width: 50vw;
-          max-width: 50vw;
+          max-width: 80vw;
           max-height: 30vh;
           color: rgb(94, 12, 12);
           font-family: 'Times New Roman', Times, serif;
@@ -185,6 +186,7 @@
           font-size: 7.5vh;
           font-weight:50;
           margin: 0;
+          white-space: nowrap;
         }
         #header h2 {
           font-size: 3vh;
@@ -243,6 +245,10 @@
         /* Adjust positioning when screen is smaller */
         /* Küçük ekranlarda menüyü yeniden konumlandır */
         @media only screen and (max-width: 768px){
+          #text {
+            width: auto; /* Allow the width to adjust based on content */
+            font-size: 4vh; 
+          }
           #content {
             position: absolute;
               bottom: 5%;
@@ -263,7 +269,7 @@
           }
 
           #menu button {
-            font-size: 1vh;
+            font-size: 2.5vh;
           }
 
           #copyright {
