--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
             position: absolute;
             bottom: 4%;
             right: 5%;
-            width: 25vw;
+            width: 15vw;
             max-width: 30vw;
             max-height: 80vh;
             color: rgb(94, 12, 12);
@@ -351,24 +351,8 @@
             <div class="timeline-item">
               <div class="circle"></div>
               <div class="text">
-                <a href="https://gitlab.com/ElifnurCiftci/verilog-calculator_group-project_sqrroot" class="text" target="_blank" rel="noopener noreferrer">
-                  Basic Calculator Group Project - Beginner Verilog
-                </a>
-              </div>
-            </div>
-            <div class="timeline-item">
-              <div class="circle"></div>
-              <div class="text">
-                <a href="https://gitlab.com/ElifnurCiftci/some-risc-v-instructions-written-in-verilog" class="text" target="_blank" rel="noopener noreferrer">
-                  Basic RISC V Processor Design - Beginner Verilog
-                </a>
-              </div>
-            </div>
-            <div class="timeline-item">
-              <div class="circle"></div>
-              <div class="text">
-                <a href="https://github.com/ElifnurCiftci/372Proje" class="text" target="_blank" rel="noopener noreferrer">
-                  Farmacy Stock Dataset Listing - Beginner Project (SQL)
+                <a href="https://github.com/ElifnurCiftci/Otomobile-Risc-and-Price-Analyze" class="text" target="_blank" rel="noopener noreferrer">
+                  My Food Assistant - Graduation Project
                 </a>
               </div>
             </div>
@@ -383,11 +367,29 @@
             <div class="timeline-item">
               <div class="circle"></div>
               <div class="text">
-                <a href="https://github.com/ElifnurCiftci/Otomobile-Risc-and-Price-Analyze" class="text" target="_blank" rel="noopener noreferrer">
-                  My Food Assistant - Graduation Project
+                <a href="https://github.com/ElifnurCiftci/372Proje" class="text" target="_blank" rel="noopener noreferrer">
+                  Farmacy Stock Dataset Listing - Beginner Project (SQL)
                 </a>
               </div>
             </div>
+            <div class="timeline-item">
+              <div class="circle"></div>
+              <div class="text">
+                <a href="https://gitlab.com/ElifnurCiftci/some-risc-v-instructions-written-in-verilog" class="text" target="_blank" rel="noopener noreferrer">
+                  Basic RISC V Processor Design - Beginner Verilog
+                </a>
+              </div>
+            </div>
+            <div class="timeline-item">
+              <div class="circle"></div>
+              <div class="text">
+                <a href="https://gitlab.com/ElifnurCiftci/verilog-calculator_group-project_sqrroot" class="text" target="_blank" rel="noopener noreferrer">
+                  Basic Calculator Group Project - Beginner Verilog
+                </a>
+              </div>
+            </div>
+            
+            
           </div>
         </div>
   
@@ -416,14 +418,15 @@
                 </div>
             </div>
         </div>
-        <div id="contact" class="section" style="display: none;">
+        <div id="contact" class="section" style="display: none; word-wrap: break-word;">
           <div class="timeline">
             <!-- E-mail -->
             <div class="timeline-item" style="border-left:none;">
               <div class="icon"><i class="fas fa-envelope icon"></i> <!-- E-mail ikonu --></div>
-              <div class="text">
-                <a href="mailto:elifnur.ciftci@gmail.com" class="text" target="_blank" rel="noopener noreferrer">
-                  elifnur.ciftci20@gmail.com
+              <div class="text" style="text-align: left;">
+                <a style="padding: 0;" href="mailto:elifnur.ciftci@gmail.com" class="text" target="_blank" rel="noopener noreferrer">
+                  elifnur.ciftci20
+                  @gmail.com
                 </a>
               </div>
             </div>
@@ -431,8 +434,8 @@
             <!-- LinkedIn -->
             <div class="timeline-item" style="border-left:none;">
               <div class="icon"><i class="fab fa-linkedin icon"></i> <!-- LinkedIn ikonu --></div>
-              <div class="text">
-                <a href="https://www.linkedin.com/in/elifnur-%C3%A7ift%C3%A7i-100a751b9/" class="text" target="_blank" rel="noopener noreferrer">
+              <div class="text" style="text-align: left;">
+                <a  style="padding: 0;" href="https://www.linkedin.com/in/elifnur-%C3%A7ift%C3%A7i-100a751b9/" class="text" target="_blank" rel="noopener noreferrer">
                   My Linkedin
                 </a>
               </div>
