--- a/index.html
+++ b/index.html
@@ -248,6 +248,7 @@
             line-height: 1.5;
             text-align: right;
             cursor: pointer;
+            word-wrap: normal;
             pointer-events: all;
             /*  Make it scrollable */
             overflow: auto;
@@ -262,7 +263,6 @@
         }
 
         /* Adjust positioning when screen is smaller */
-        /* Küçük ekranlarda menüyü yeniden konumlandır */
         @media only screen and (max-width: 600px){
           #mode-toggle {
             font-size: 1.7vh;
@@ -352,7 +352,7 @@
             <div class="timeline-item">
               <div class="circle"></div>
               <div class="text">
-                <a href="https://github.com/ElifnurCiftci/Otomobile-Risc-and-Price-Analyze" class="text" target="_blank" rel="noopener noreferrer">
+                <a href="https://github.com/ElifnurCiftci/Yemek-Asistanim" class="text" target="_blank" rel="noopener noreferrer">
                   My Food Assistant - Graduation Project
                 </a>
               </div>
@@ -421,7 +421,6 @@
         </div>
         <div id="contact" class="section" style="display: none; word-wrap: break-word;">
           <div class="timeline">
-            <!-- E-mail -->
             <div class="timeline-item" style="border-left:none;">
               <div class="icon"><i class="fas fa-envelope icon"></i> <!-- E-mail ikonu --></div>
               <div class="text" style="text-align: left;">
@@ -432,7 +431,6 @@
               </div>
             </div>
         
-            <!-- LinkedIn -->
             <div class="timeline-item" style="border-left:none;">
               <div class="icon"><i class="fab fa-linkedin icon"></i> <!-- LinkedIn ikonu --></div>
               <div class="text" style="text-align: left;">
